Fixed stupid mistake

--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.2.4"
   },
   "authors": [
-    "Zaid <akuzaid93@yahoo.com>"
+    "Zaid <hudadiaz@gmail.com>"
   ],
   "ignore": [
     "**/.*",
